--- a/materia1.html
+++ b/materia1.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Notícias tops dms</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="img/favicon.png">
+  <title>Arcane uma obra prima sobre League of Legends</title>
+  <link rel="stylesheet" href="style2.css">
 </head>
 <body>
   <!-- Header -->
@@ -27,3 +28,46 @@
     Uma obra-prima cinematográfica que expande o universo de League of Legends
     </div>
   </section>
+
+    <main>
+    <h1>Uma obra-prima cinematográfica que expande o universo de League of Legends</h1>
+
+  <div class="banner"><img src="img/jinxarcane.webp" alt=""></div>
+
+  <p>Arcane, a série animada produzida pela Riot Games e lançada pela Netflix, elevou o padrão para adaptações de jogos eletrônicos, conquistando tanto fãs quanto críticos com sua narrativa sofisticada e estética visual impressio nante. Com uma combinação única de animação 3D com texturas pictóricas e uma direção artística refinada, Arcane se destaca como um verdadeiro espetáculo cinematográfico.</p>
+  <br>
+  <h3>A trama: A tensão entre Piltover e Zaun</h3>
+  <br>
+  <p>Ambientada nas cidades irmãs de Piltover e Zaun, a narrativa de Arcane mergulha nas desigualdades sociais e políticas entre uma sociedade próspera e sua contraparte submersa em pobreza e caos. Piltover é um centro de inovação científica, onde a tecnologia avança rapidamente, enquanto Zaun vive à sombra dessa prosperidade, enfrentando poluição, criminalidade e exploração.</p>
+  <br>
+  <p>Essa dicotomia serve de base para a história de personagens que buscam seu lugar nesse mundo dividido, enfrentando dilemas morais, traições e escolhas que impactam o destino dessas cidades.</p>
+  <br>  
+  <h3>Personagens principais: profundidade emocional e complexidade moral Vi e Jinx — Laços de sangue e destino trágico</h3>
+  <br>
+  <p>No centro da trama estão as irmãs Vi e Jinx, cujas histórias entrelaçadas simbolizam a dualidade entre ordem e caos. Vi é uma jovem forte e determinada, que busca justiça e redenção, enquanto Jinx, traumatizada e instável, representa o perigo de um passado não resolvido e a destruição que pode emergir da dor.</p>
+  <br>  
+  <p>A relação delas é um dos pontos mais emocionantes da série, revelando a luta interna entre amor fraternal e rancor, com repercussões que abalam todo o equilíbrio de Piltover e Zaun.</p>
+  <br>
+  <h3>Ekko — O prodígio de Zaun e mestre do tempo</h3>
+  <br>
+  <p>Ekko emerge como um símbolo de esperança e inovação para Zaun. Inventor brilhante e líder nato, sua habilidade de manipular o tempo não é apenas um elemento fantástico, mas uma metáfora para o desejo humano de controlar o próprio destino e corrigir erros do passado.</p>
+  <br>
+  <p>Sua narrativa é marcada pela coragem e pela responsabilidade, pois ele carrega o fardo de proteger sua comunidade e desafiar as estruturas opressoras que mantêm Zaun em sofrimento.</p>
+  <br>
+  <h3>Caitlyn — Justiça e idealismo em Piltover</h3>
+  <br>
+  <p>Do lado de Piltover, Caitlyn representa a lei, a ordem e a esperança por uma sociedade mais justa. Sua visão idealista, porém realista, a posiciona como uma agente da mudança, lutando contra a corrupção interna e o crime que ameaça a cidade.</p>
+  <br>
+  <p>A jornada de Caitlyn é também uma busca por identidade, onde seu senso de dever é testado por conflitos internos e externos, mostrando que a justiça nem sempre é uma linha clara entre certo e errado.</p>
+  <br>
+  <h3>O impacto visual e narrativo</h3>
+  <br>
+  <p>O que torna Arcane uma experiência cinematográfica única é sua capacidade de unir uma animação inovadora a um roteiro que não subestima o público. Cada quadro é cuidadosamente construído para transmitir emoção, tensão e beleza, enquanto a trilha sonora e o design sonoro intensificam a imersão na narrativa.</p>
+  <br>
+  <p>A direção da série aposta em um ritmo que equilibra momentos de ação com cenas introspectivas, permitindo que o espectador se conecte profundamente com as motivações e fragilidades dos personagens.</p>
+  <br>
+  <br>
+  </main>
+
+</body>
+</html>
