melhorando a leitura do código

--- a/materia3.html
+++ b/materia3.html
@@ -34,29 +34,28 @@
 
   <div class="banner"><img src="https://rollingstone.com.br/media/uploads/legacy/2015/img-1034407-pulp-fiction.jpg" alt=""></div>
 
-  <h3>A Revolução da Narrativa Não Linear</h3>
-  <br>
+  <h3>A Revolução da Narrativa Não Linear</h3><br>
+  
   <p>Tarantino quebrou a tradição hollywoodiana de contar histórias de forma cronológica. Pulp Fiction apresenta múltiplas tramas que se entrelaçam, mas em ordem fragmentada.
-  Essa abordagem não apenas surpreendeu o público, mas abriu caminho para obras posteriores como Amnésia (Memento), 21 Gramas e até séries como Breaking Bad, que também brincam com a manipulação do tempo narrativo.</p>
-  <br>
-  <h3>Humanização do Cotidiano no Meio da Violência</h3>
-  <br>
-  <p>Os personagens discutindo hambúrgueres, massagens nos pés e programas de TV, em meio a situações de crime e assassinato, criaram um contraste inusitado. Essa fusão entre banalidade e brutalidade humanizou personagens do submundo e influenciou roteiristas a dar mais importância ao diálogo como motor narrativo.</p>
-  <br>
-  <h3>Referências e Estilo Pós-Moderno</h3>
-  <br>
+  Essa abordagem não apenas surpreendeu o público, mas abriu caminho para obras posteriores como Amnésia (Memento), 21 Gramas e até séries como Breaking Bad, que também brincam com a manipulação do tempo narrativo.</p><br>
+  
+  <h3>Humanização do Cotidiano no Meio da Violência</h3><br>
+  
+  <p>Os personagens discutindo hambúrgueres, massagens nos pés e programas de TV, em meio a situações de crime e assassinato, criaram um contraste inusitado. Essa fusão entre banalidade e brutalidade humanizou personagens do submundo e influenciou roteiristas a dar mais importância ao diálogo como motor narrativo.</p><br>
+ 
+  <h3>Referências e Estilo Pós-Moderno</h3><br>
+  
   <p>Tarantino transformou referências da cultura pop, do cinema B e de clássicos esquecidos em um mosaico estilístico único. Pulp Fiction tornou-se um manifesto do cinema pós-moderno, onde a colagem de estilos e citações é tão importante quanto a própria trama.
-  Isso abriu espaço para que diretores contemporâneos tratassem o “ecletismo” como linguagem legítima.</p>
-  <br>  
-  <h3>Impacto Estético e Sonoro</h3>
-  <br>
-  <p>A trilha sonora, recheada de músicas esquecidas dos anos 60 e 70, virou marca registrada e influenciou o resgate de faixas “cult”. O visual — misturando o realismo sujo com toques de estilização — também ditou tendência em filmes independentes e até em videoclipes da época.</p>
-  <br>  
-  <h3>Consolidação do Cinema Independente</h3>
-  <br>
-  <p>Ao vencer a Palma de Ouro em Cannes e se tornar um fenômeno de bilheteria, Pulp Fiction mostrou que um filme de orçamento moderado, com ousadia artística, poderia conquistar tanto o público quanto a crítica. Isso fortaleceu o cinema independente dos EUA e inspirou produtoras a investir em histórias mais arriscadas.</p>
-  <br>
-  <br>
+  Isso abriu espaço para que diretores contemporâneos tratassem o “ecletismo” como linguagem legítima.</p><br>
+  
+  <h3>Impacto Estético e Sonoro</h3><br>
+  
+  <p>A trilha sonora, recheada de músicas esquecidas dos anos 60 e 70, virou marca registrada e influenciou o resgate de faixas “cult”. O visual — misturando o realismo sujo com toques de estilização — também ditou tendência em filmes independentes e até em videoclipes da época.</p><br>
+ 
+  <h3>Consolidação do Cinema Independente</h3><br>
+  
+  <p>Ao vencer a Palma de Ouro em Cannes e se tornar um fenômeno de bilheteria, Pulp Fiction mostrou que um filme de orçamento moderado, com ousadia artística, poderia conquistar tanto o público quanto a crítica. Isso fortaleceu o cinema independente dos EUA e inspirou produtoras a investir em histórias mais arriscadas.</p><br><br>
+  
   </main>
 
 </body>
